<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MultiCamera</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="record">Record</string>
    <string name="picture">Picture</string>
    <string name="stop">Stop</string>
    <string name="done">Done</string>


    <!-- Preference Titles -->
    <!-- Video quality setting entry. Videos will be recorded in the lowest quality available on the device. [CHAR LIMIT=24] -->
    <string name="pref_video_quality_entry_low">Low</string>
    <!-- Video quality setting entry. Videos will be recorded in the highest quality available on the device. [CHAR LIMIT=24] -->
    <string name="pref_video_quality_entry_high">High</string>
    <!-- Video quality setting entry. Videos will be recorded in quarter CIF quality. Details on CIF: http://goo.gl/3jDK [CHAR LIMIT=24] -->
    <string name="pref_video_quality_entry_qcif">QCIF</string>
    <!-- Video quality setting entry. Videos will be recorded in CIF quality. Details on CIF: http://goo.gl/3jDK [CHAR LIMIT=24] -->
    <string name="pref_video_quality_entry_cif">CIF</string>
    <!-- Video quality setting entry. Videos will be recorded in 480p quality. [CHAR LIMIT=24] -->
    <string name="pref_video_quality_entry_480p">SD 480p</string>
    <!-- Video quality setting entry. Videos will be recorded in 720p quality. [CHAR LIMIT=24] -->
    <string name="pref_video_quality_entry_720p">HD 720p</string>
    <!-- Video quality setting entry. Videos will be recorded in 1080p quality. [CHAR LIMIT=24] -->
    <string name="pref_video_quality_entry_1080p">FHD 1080p</string>
    <!-- Video quality setting entry. Videos will be recorded in quarter VGA quality. [CHAR LIMIT=24] -->
    <string name="pref_video_quality_entry_qvga">QVGA</string>
    <!-- Video quality setting entry. Videos will be recorded in 2160p quality. [CHAR LIMIT=24] -->
    <string name="pref_video_quality_entry_2160p">UHD 4K</string>


    <!-- The value of a camera preference indicating the video quality is 'large'. -->
    <string name="pref_video_quality_large" translatable="false">large</string>
    <!-- The value of a camera preference indicating the video quality is 'medium'. -->
    <string name="pref_video_quality_medium" translatable="false">medium</string>
    <!-- The value of a camera preference indicating the video quality is 'small'. -->
    <string name="pref_video_quality_small" translatable="false">small</string>


    <string name="pref_camera_picturesize_default" translatable="false">1280x720</string>

    <!-- Preference Titles -->
    <string name="Source">Camera Source</string>
    <string name="Resolution">Resolution &amp; quality</string>

    <!-- Camera Preferences -->
    <string name="pref_header_Camera_Capture_Resolution">Capture Resolution</string>
    <string name="pref_header_Camera_Video_Resolution">Video Quality</string>

    <string name="setting_summary_width_and_height">%1$dx%2$d</string>

    <!-- Multi Preferences -->
    <string name="pref_header_multi_usb_cam_list">USB Cameras</string>
    <string name="multi_usb_cam_list_default">One</string>

    <!-- Video Camera format string for new video files. Passed to java.text.SimpleDateFormat. -->
    <string name="video_file_name_format" translatable="false">"'VID'_yyyyMMdd_HHmmss"</string>

    <!-- Video Camera format string for new video files. Passed to java.text.SimpleDateFormat. -->
    <string name="pic_file_name_format" translatable="false">"'IMG'_yyyyMMdd_HHmmss"</string>


    <!-- title for the dialog showing the error of camera hardware -->
    <string name="camera_error_title">Camera error</string>

    <!-- message for the dialog showing that the app does not have sufficient permissions [CHAR LIMIT=NONE] -->
    <string name="error_permissions">The app does not have critical permissions needed to run.
        Please check your permissions settings.
    </string>

    <!-- Dialog "Dismiss" button. Closes the dialog [CHAR LIMIT=12]-->
    <string name="dialog_dismiss">Dismiss</string>

    <!-- Strings for Camera Intents -->
    <string name="read_me">READ ME</string>
    <string name="info">
        1. Use ItsCameraIntentsTest OPTION for testing CAMERA INTENTS \n\n
        2. For MULTI CAMERA VIEW select 2nd option \n
    </string>

    <string name="ItsCameraIntentTest">CAMERA INTENTS TEST</string>
    <string name="MultiCameraView">MULTI CAMERA VIEW</string>

    <!-- Announcement telling users video recording has just started [CHAR LIMIT=NONE] -->
    <string name="video_recording_started">Video recording has started.</string>
    <!-- Announcement telling users video recording has just stopped [CHAR LIMIT=NONE] -->
    <string name="video_recording_stopped">Video recording has stopped.</string>

    <!-- Describes button on top of a video in filmstrip that is a play icon, pressing starts external video player [CHAR LIMIT=NONE] -->
    <string name="video_control_play">Play Video</string>

    <!-- String indicating an error when playing the video. [CHAR LIMIT=30] -->
    <string name="video_err">Can\'t play video.</string>

    <!-- Accessibility text for preview delete button [CHAR_LIMIT=NONE] -->
    <string name="delete_button_description">Delete</string>

    <!-- Message shown in the settings summary for how many megapixels have been selected. [CHAR LIMIT=24]-->
    <string name="setting_summary_x_megapixels">%1$s megapixels</string>

    <!-- Message shown in the settings summary that includes the the aspect ratio of the selected resolution i.e. (4:3) and the size of the selected resolution in megapixels. [CHAR LIMIT=24]-->
    <string name="setting_summary_aspect_ratio_and_megapixels">(%1$d:%2$d) %3$s megapixels</string>

    <!-- Used to format short video duration in Details dialog. minutes:seconds e.g. 00:30 -->
    <string name="details_ms">%1$02d:%2$02d</string>
    <!-- Used to format video duration in Details dialog. hours:minutes:seconds e.g. 0:21:30 -->
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>

    <!-- Text indicating the title of a media item in details window [CHAR LIMIT=14] -->
    <string name="title">Title</string>
    <!-- Text indicating the description of a media item in details window [CHAR LIMIT=14] -->
    <string name="description">Description</string>
    <!-- Text indicating the creation time of a media item in details window [CHAR LIMIT=14] -->
    <string name="time">Taken on</string>
    <!-- Text indicating the location of a media item in details window [CHAR LIMIT=14] -->
    <string name="location">Location</string>
    <!-- Text indicating the path of a media item in details window [CHAR LIMIT=14] -->
    <string name="path">Path</string>
    <!-- Text indicating the width of a media item in details window [CHAR LIMIT=14] -->
    <string name="width">Width</string>
    <!-- Text indicating the height of a media item in details window [CHAR LIMIT=14] -->
    <string name="height">Height</string>
    <string name="dimensions">Dimensions</string>
    <!-- Text indicating the orientation of a media item in details window [CHAR LIMIT=14] -->
    <string name="orientation">Orientation</string>
    <!-- Text indicating the duration of a video item in details window [CHAR LIMIT=18] -->
    <string name="duration">Duration</string>
    <!-- Text indicating the mime type of a media item in details window [CHAR LIMIT=14] -->
    <string name="mimetype">MIME type</string>
    <!-- Text indicating the file size of a media item in details window [CHAR LIMIT=14] -->
    <string name="file_size">File size</string>
    <!-- Text indicating the maker of a media item in details window [CHAR LIMIT=14] -->
    <string name="maker">Maker</string>
    <!-- Text indicating the model of a media item in details window [CHAR LIMIT=14] -->
    <string name="model">Model</string>
    <!-- String indicating the length units in milli-meters. [CHAR LIMIT=8] -->
    <string name="unit_mm">mm</string>


    <!-- String indicating image width or height is unknown. [CHAR LIMIT=14] -->
    <string name="unknown">Unknown</string>

    <string name="details">Details</string>
    <string name="usb_change">USB hot plug detected</string>
    <string name="close">Close</string>

    <!-- The height and width of a photo. -->

    <!-- The width and height of a photo, followed by a the "megapixel rating".
         Cameras are frequently rated by "megapixels". In U.S. English the "megapixels" rating
         of a camera is denoted by a number followed by "MP". E.g. 12.2MP or 8MP. -->
    <string name="metadata_dimensions_format">
        <xliff:g id="width" example="1280">%1$d</xliff:g> x
        <xliff:g id="height" example="1024">%2$d</xliff:g> -
        <xliff:g id="megapixels" example="12.2">%3$,.1f</xliff:g>MP (
        <xliff:g id="numerator" example="16">%4$d</xliff:g>:
        <xliff:g id="denominator" example="9">%5$d</xliff:g> )


    </string>
    <string name="datemodified">Modified</string>
    <string name="type">Type</string>
    <string name="video_reach_size_limit">Size limit reached</string>


</resources>
