<!--
 * Copyright (c) 2019 Intel Corporation.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/Resolution"
        app:key="pref_resolution_3">
        <ListPreference
            app:defaultValue="@string/pref_camera_picturesize_default"
            app:entryValues="@array/pref_capture_list_values_3"
            app:key="capture_list_3"
            app:negativeButtonText="@null"
            app:positiveButtonText="@null"
            app:title="@string/pref_header_Camera_Capture_Resolution" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <!--app:entries="@array/pref_video_list_entries"-->
        <ListPreference
            app:defaultValue="@string/pref_video_quality_entry_720p"
            app:entryValues="@array/pref_video_list_values_3"
            app:key="video_list_3"
            app:negativeButtonText="@null"
            app:positiveButtonText="@null"
            app:title="@string/pref_header_Camera_Video_Resolution" />

    </PreferenceCategory>


</androidx.preference.PreferenceScreen>



